fixed misaligned icons, happy smiley and car logos, fixed text area can now change to the right

--- a/custom-radio-btn.scss
+++ b/custom-radio-btn.scss
@@ -14,14 +14,14 @@
 .mercedes{
   color: transparent;
   background: $images red;
-  background-position: 0 -170px;
+  background-position: 0 -280px;
   width: 100px;
   text-indent: -9999px;
   height: 100px;
 }
 .audi{
   background: $images red;
-  background-position: 0 -275px;
+  background-position: 0 -170px;
   width: 100px;
   height: 100px;
   text-indent: -9999px;
@@ -80,7 +80,7 @@
 .happy{
   color: transparent;
   background: $images red;
-  background-position: 0 -447px;
+  background-position: 0 -448px;
   width: 48px;
   height: 48px;
   text-indent: -9999px;
