--- a/layout.scss
+++ b/layout.scss
@@ -13,7 +13,7 @@
   width: 90%;
   background: $images #fff;
   text-indent: 25px;
-  background-position: 0 -27px;
+  background-position: 5px -25px;
   margin: $margin-select;
   input {
     width: 100%;
