--- a/styles.scss
+++ b/styles.scss
@@ -27,7 +27,7 @@ $images: url('images.png') no-repeat top left;
 /*default header style*/
 h4 {
     font: $title-font-oswald;
-    font-size: 26px;
+    font-size: 27px;
     color: $color-header;
     padding: 10px 0 0 5px;
   }
